--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -16,7 +16,9 @@ events {
 
 http {
     include       mime.types;
+    include	  /home/vladimir/nginx/conf/backend.conf;
     default_type  application/octet-stream;
+    vhost_traffic_status_zone;
 
     #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
     #                  '$status $body_bytes_sent "$http_referer" '
@@ -32,65 +34,40 @@ http {
 
     #gzip  on;
 
-    server {
-        listen       80;
-        server_name  localhost;
-
-        #charset koi8-r;
-
-        #access_log  logs/host.access.log  main;
-
-        location / {
-            root   html;
-            index  index.html index.htm;
-        }
-
-        #error_page  404              /404.html;
-
-        # redirect server error pages to the static page /50x.html
-        #
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
-
-        # proxy the PHP scripts to Apache listening on 127.0.0.1:80
-        #
-        #location ~ \.php$ {
-        #    proxy_pass   http://127.0.0.1;
-        #}
-
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        #location ~ \.php$ {
-        #    root           html;
-        #    fastcgi_pass   127.0.0.1:9000;
-        #    fastcgi_index  index.php;
-        #    fastcgi_param  SCRIPT_FILENAME  /scripts$fastcgi_script_name;
-        #    include        fastcgi_params;
-        #}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        #location ~ /\.ht {
-        #    deny  all;
-        #}
-    }
+    
 
 
     # another virtual host using mix of IP-, name-, and port-based configuration
     #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
+    server {
+        listen       8080;
+        listen       192.168.122.132:8080;
+        server_name  192.168.122.132;
 
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
+        location / {
+            root /home/vladimir/nginx/html;
+            index  index.html index.htm;
+        }
+	location /pictures/ {
+            alias html/resources/pictures/;
+        }
+	location /admin {
+            try_files $uri /admin.html;
+	    auth_basic "restricted";
+	    auth_basic_user_file /home/vladimir/nginx/conf/.htpasswd;
+        }
+	location /status {
+            vhost_traffic_status_display; 
+	    vhost_traffic_status_display_format html;
+	    allow 192.168.122.132;
+    	    deny all;
+            
+        }
+   
+    
+	
+
+    }
 
 
     # HTTPS server
