--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -16,7 +16,10 @@ events {
 
 http {
     include       mime.types;
-    include	  /home/vladimir/nginx/conf/backend.conf;
+#include /home/vladimir/nginx/conf/backend.conf;
+include /home/vladimir/nginx/conf/upstreams/web.conf;
+include /home/vladimir/nginx/conf/vhosts/lb.conf;
+
     default_type  application/octet-stream;
     vhost_traffic_status_zone;
 
@@ -39,35 +42,7 @@ http {
 
     # another virtual host using mix of IP-, name-, and port-based configuration
     #
-    server {
-        listen       8080;
-        listen       192.168.122.132:8080;
-        server_name  192.168.122.132;
-
-        location / {
-            root /home/vladimir/nginx/html;
-            index  index.html index.htm;
-        }
-	location /pictures/ {
-            alias html/resources/pictures/;
-        }
-	location /admin {
-            try_files $uri /admin.html;
-	    auth_basic "restricted";
-	    auth_basic_user_file /home/vladimir/nginx/conf/.htpasswd;
-        }
-	location /status {
-            vhost_traffic_status_display; 
-	    vhost_traffic_status_display_format html;
-	    allow 192.168.122.132;
-    	    deny all;
-            
-        }
-   
-    
-	
-
-    }
+ 
 
 
     # HTTPS server
